@@ -20,7 +20,7 @@ SGI, as well as PCs running Linux, BSDI, and SCO UNIX.  To compile for
 a PC running Windows, see the README file in the directory ../win.  To
 compile for a Macintosh, see the README file in the directory ../mac.
 
-RCS: @(#) $Id: README,v 1.10 2000/05/03 00:18:36 hobbs Exp $
+RCS: @(#) $Id: README,v 1.11 2000/08/25 05:55:05 mo Exp $
 
 How To Compile And Install Tk:
 ------------------------------
@@ -44,10 +44,6 @@ How To Compile And Install Tk:
     type "./configure -help" or refer to the autoconf documentation (not
     included here).  Tk's "configure" script supports the following
     special switches in addition to the standard ones:
-	--enable-gcc		If this switch is set, Tk will configure
-				itself to use gcc if it is available on your
-				system.  Note:  it is not safe to modify the
-				Makefile to use gcc after configure is run.
 	--enable-threads	Tk on Unix currently does not support
 				threaded builds.
 	--with-tcl=DIR		Specifies the directory containing the Tcl
@@ -62,6 +58,12 @@ How To Compile And Install Tk:
 				how to build shared libraries.
 	--disable-shared	If this switch is specified, Tk will compile
 				itself as a static library.
+
+    Note: by default gcc will be used if it can be located on the PATH.
+    if you want to use cc instead of gcc, set the CC environment variable
+    to "cc" before running configure. It is not safe to change the Makefile
+    to use gcc after configure is run.
+
     Note: be sure to use only absolute path names (those starting with "/")
     in the --prefix and --exec_prefix options.
 
