@@ -3,7 +3,7 @@ dnl	This file is an input file used by the GNU "autoconf" program to
 dnl	generate the file "configure", which is run during Tk installation
 dnl	to configure the system for the local environment.
 AC_INIT(../generic/tk.h)
-# RCS: @(#) $Id: configure.in,v 1.53 2000/07/19 02:16:00 mo Exp $
+# RCS: @(#) $Id: configure.in,v 1.54 2000/08/25 05:55:06 mo Exp $
 
 TK_VERSION=8.4
 TK_MAJOR_VERSION=8
@@ -22,9 +22,8 @@ fi
 srcdir=`cd $srcdir ; pwd`
 TK_SRC_DIR=`cd $srcdir/..; pwd`
 
-AC_PROG_RANLIB
-SC_ENABLE_GCC
 AC_PROG_CC
+AC_PROG_RANLIB
 
 #------------------------------------------------------------------------
 # I'm not sure why these need to come before all of the other tests
