@@ -2,7 +2,7 @@
 # generate the file "configure", which is run during Tk installation
 # to configure the system for the local environment.
 #
-# RCS: @(#) $Id: configure.in,v 1.21 2000/07/27 22:52:43 mo Exp $
+# RCS: @(#) $Id: configure.in,v 1.22 2000/08/25 05:55:07 mo Exp $
 
 AC_INIT(../generic/tk.h)
 
@@ -12,13 +12,27 @@ TK_MINOR_VERSION=4
 TK_PATCH_LEVEL="a1"
 VER=$TK_MAJOR_VERSION$TK_MINOR_VERSION
 
-#--------------------------------------------------------------------
-# Check whether --enable-gcc or --disable-gcc was given.  Do this 
-# before AC_PROG_CC and AC_CYGWIN are called so the compiler can 
-# be fully tested by built-in autoconf tools.
-#--------------------------------------------------------------------
- 
-SC_ENABLE_GCC
+#------------------------------------------------------------------------
+# Standard compiler checks
+#------------------------------------------------------------------------
+
+AC_PROG_CC
+
+# To properly support cross-compilation, one would
+# need to use these tool checks instead of
+# the ones below and reconfigure with
+# autoconf 2.50. You can also just set
+# the CC, AR, RANLIB, and RC environment
+# variables if you want to cross compile.
+#AC_CHECK_TOOL(AR, ar, :)
+#AC_CHECK_TOOL(RANLIB, ranlib, :)
+#AC_CHECK_TOOL(RC, windres, :)
+
+if test "${GCC}" = "yes" ; then
+    AC_CHECK_PROG(AR, ar, ar)
+    AC_CHECK_PROG(RANLIB, ranlib, ranlib)
+    AC_CHECK_PROG(RC, windres, windres)
+fi
 
 #--------------------------------------------------------------------
 # Checks to see if the make progeam sets the $MAKE variable.
